<resources>
    <string name="app_name">Around The World</string>
    <string name="social">Social</string>
    <string name="news">News</string>
    <string name="shops">Shops</string>
    <string name="ad">Advertisement</string>
    <string name="title_activity_ads">Advertisement</string>
    <string name="title_activity_news">News</string>
    <string name="title_activity_social">Social</string>
    <string name="title_activity_shop">Shops</string>
    <string name="my_params">My parameters</string>
    <string name="my_city">My city</string>
    <string name="my_tastes">I like &#8230;</string>
    <string name="title_activity_city">My City</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="you_are">"You are in "</string>
    <string name="change_city">Change city :</string>
    <string name="title_activity_setting">My settings</string>
    <string name="my_info">My information</string>
    <string name="name">"Name : "</string>
    <string name="firstname">"First name : "</string>
    <string name="birthday">Birthday :</string>
    <string name="gender">Gender :</string>
    <string name="size">Size (m) :</string>
    <string name="weight">Weight (kg) :</string>
    <string name="update">Update</string>
    <string name="title_activity_update_setting">Update settings</string>
    <string name="dateFormat">MM/dd/yyyy</string>
    <string name="weather">Weather</string>
    <string name="title_activity_weather">Weather</string>
    <string name="weather_not_found">Weather not found</string>
    <string name="humidity">"Humidity : "</string>
    <string name="interesting">Interesting</string>
    <string name="not_interesting">Not interesting</string>
    <string name="without_opinion">Without opinion</string>
    <string name="ad_not_found">No more ad to display</string>
    <string name="feedback">Thanks for your feedback</string>
    <string name="firstCity">Paris</string>
    <string name="title_activity_like">I like...</string>
    <string name="create_group">Create group</string>
    <string name="user_created">User created</string>
    <string name="network">Network :</string>
    <string name="private_sub">Private ?</string>
    <string name="networks_not_found">Networks not found</string>
    <string name="title_activity_chat">Chat</string>
    <string name="error_apiNews">Error loading news\' api</string>
    <string name="longClickNeeded">Press and hold to delete the item</string>
    <string name="connect_please">Please enter a name first</string>
</resources>
