<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/toolbar_actionbar"/>
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text ="@string/ad"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:src="@drawable/pub"
                android:padding="5dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                >
                <Button
                    android:id="@+id/interesting"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/validateButton"
                    android:text="@string/interesting"/>
                <Button
                    android:id="@+id/notInteresting"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/cancelButton"
                    android:text="@string/not_interesting"
                   />
            </LinearLayout>
            <Button
                android:id="@+id/no_comment"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/without_opinion"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
