<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:paddingLeft="16dp"
        android:background="#FFFFBB33"
        android:textColor="@color/colorWhite"
        android:text="@string/network"
        android:contentDescription="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:gravity="center_vertical"
        android:paddingStart="16dp" />
    <EditText
        android:id="@+id/subName"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:maxLength="15"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/private_sub"
            android:contentDescription="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:padding="16dp"/>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>