<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightBlack">
    <include layout="@layout/toolbar_actionbar"/>
        <TableLayout
            android:id = "@+id/tableLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_below="@+id/toolbar">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginBottom="4dp">

                <!--Button1 -->
                <RelativeLayout
                    android:id="@+id/button1"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:background="@color/colorTiles"
                    android:onClick="openNewsAct">

                    <ImageView
                        android:id="@+id/newsImg"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_centerInParent="true"
                        android:contentDescription="@id/newsTxt"
                        android:src="@drawable/ic_android_black_24dp" />

                    <TextView
                        android:id="@+id/newsTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="4dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginStart="4dp"
                        android:text="@string/news"
                        android:textColor="@color/colorWhite"/>

                </RelativeLayout>

                <!--Button2 -->
                <RelativeLayout
                    android:id="@+id/button2"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:background="@color/colorTiles"
                    android:onClick="openSocialAct">

                    <ImageView
                        android:id="@+id/socialImg"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_centerInParent="true"
                        android:contentDescription="@string/social"
                        android:src="@drawable/ic_android_black_24dp" />

                    <TextView
                        android:id="@+id/socialTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="4dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginStart="4dp"
                        android:text="@string/social"
                        android:textColor="@color/colorWhite"/>
                </RelativeLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <!--Button3 -->
                <RelativeLayout
                    android:id="@+id/button3"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:background="@color/colorTiles"
                    android:onClick="openShopAct">

                    <ImageView
                        android:id="@+id/shopsImg"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_centerInParent="true"
                        android:contentDescription="@string/shops"
                        android:src="@drawable/ic_android_black_24dp" />

                    <TextView
                        android:id="@+id/shopsTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="4dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginStart="4dp"
                        android:text="@string/shops"
                        android:textColor="@color/colorWhite"/>
                </RelativeLayout>

                <!--Button4 -->
                <RelativeLayout
                    android:id="@+id/button4"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:background="@color/colorTiles"
                    android:onClick="openAdsAct">

                    <ImageView
                        android:id="@+id/adImg"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_centerInParent="true"
                        android:contentDescription="@string/ad"
                        android:src="@drawable/ic_android_black_24dp" />

                    <TextView
                        android:id="@+id/adTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="4dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginStart="4dp"
                        android:text="@string/ad"
                        android:textColor="@color/colorWhite"/>
                </RelativeLayout>
            </TableRow>
        </TableLayout>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>